tools/lsp/squirrel/grammar/pascaligo/grammar.js
    source_file: $ => common.sepEndBy(optional(';'), field("declaration", $._declaration)),

    _declaration: $ =>
      choice(
        $.type_decl,
        $.const_decl,
        $.fun_decl,
        $.preprocessor,
      ),

    /// TYPE DECLARATION

    type_decl: $ =>
      seq(
        "type",
        field("typeName", $.TypeName),
        "is",
        field("typeValue", $._type_expr),
      ),

    _type_expr: $ => choice(
      $.sum_type,
      $.record_type,
      $._simple_type,
    ),

    // Sum type
    sum_type: $ => choice(
      common.sepBy1('|', field("variant", $.variant)),
      common.withAttrs($, seq('|', common.sepBy1('|', field("variant", $.variant)))),
    ),

    variant: $ => choice(
      common.withAttrs($, $._variant_simple),
      common.withAttrs($, $._variant_args),
    ),

    _variant_simple: $ => field("constructor", $.ConstrName),
    _variant_args: $ => seq(
      field("constructor", $.ConstrName),
      'of',
      field("arguments", $._simple_type)
    ),

    // Record type
    record_type: $ => common.withAttrs($,
      choice(
        seq('record', common.sepEndBy(';', field("field", $.field_decl)), 'end'),
        seq('record', '[', common.sepEndBy(';', field("field", $.field_decl)), ']'),
      ),
    ),

    field_decl: $ => common.withAttrs($,
      seq(
        field("fieldName", $.FieldName),
        ':',
        field("fieldType", $._type_expr),
      ),
    ),

    // Simple type
    /* upstream: `fun_type` -> `cartesian` -> `core_type` */
    const_decl: $ => common.withAttrs($,
      seq(
        'const',
        field("name", $.NameDecl),
        optional(seq(
          ':',
          field("type", $._type_expr),
        )),
        '=',
        field("value", $._expr),
      ),
    ),

    /// FUNCTION DECLARATION

    fun_decl: $ => common.withAttrs($,
      seq(
        field("recursive", optional($.recursive)),
        'function',
        field("name", $.NameDecl),
        $.parameters,
        optional(seq(':', field("type", $._type_expr))),
        'is',
        field("body", $._expr),
      ),
    ),

    param_decl: $ =>
      seq(
        field("access", $._access),
        field("name", choice($.NameDecl, $.NameWildcard)),
        ':',
        field("type", $._param_type),
      ),

    _access: $ => choice('var', 'const'),

    _param_type: $ => $._simple_type,

    /// STATEMENTS

    _statement: $ =>
      choice(
        $.type_decl,
        $._open_data_decl,
        $._instruction,
      ),

    var_decl: $ =>
      seq(
        'var',
        field("name", $._pattern),
        optional(seq(':', field("type", $._type_expr))),
        ':=',
        field("value", $._expr),
      ),

    assignment: $ =>
      seq(
        field("LHS", $._lhs),
        ':=',
        field("RHS", $._rhs),
      ),

    _lhs: $ => choice($._path, $.map_lookup),
    _rhs: $ => $._expr,

    // Loops
    _pattern: $ =>
      choice(
        $.cons_pattern,
        $._core_pattern,
      ),

    var_pattern: $ => field("name", $.NameDecl),

    /// EXPRESSIONS

    _expr: $ =>
      choice(
        $.case_expr,
        $.cond_expr,
        $.fun_expr,
        $.let_expr,
        $.michelson_interop,
        $._op_expr,
      ),

     // Case Expressions
    let_expr: $ =>
      seq(
        field("locals", $.block),
        'with',
        field("body", $._expr),
      ),

    // Michelson expressions
    _op_expr: $ =>
      choice(
        $.binop,
        $.unop,
        $._core_expr,
      ),

    binop: $ =>
      choice(
        prec.left(0, seq(field("arg1", $._op_expr), field("op", 'or'), field("arg2", $._op_expr))),
        prec.left(1, seq(field("arg1", $._op_expr), field("op", 'and'), field("arg2", $._op_expr))),
        prec.right(2, seq(field("arg1", $._core_expr), field("op", 'contains'), field("arg2", $._op_expr))),
        prec.left(3, seq(field("arg1", $._op_expr), field("op", $.comparison), field("arg2", $._op_expr))),
        prec.right(4, seq(field("arg1", $._op_expr), field("op", '^'), field("arg2", $._op_expr))),
        prec.right(5, seq(field("arg1", $._op_expr), field("op", '#'), field("arg2", $._op_expr))),
        prec.left(6, seq(field("arg1", $._op_expr), field("op", $.adder), field("arg2", $._op_expr))),
        prec.left(7, seq(field("arg1", $._op_expr), field("op", $.multiplier), field("arg2", $._op_expr))),
      ),

    adder: $ => choice('-', '+'),
    _core_expr: $ =>
      choice(
        $.Int,
        $.Nat,
        $.Tez,
        $.Name,
        $.String,
        $.Bytes,
        $.False,
        $.True,
        $.Unit,
        $.None,

        $.annot_expr,
        $.tuple_expr,
        $._list_expr,
        $._fun_call_or_par_or_projection,
        $._map_expr,
        $.set_expr,
        $.record_expr,
        $.update_record,
        $._constr_use,
        $.paren_expr,
      ),

    // Annotation expression
    preprocessor: $ => field("preprocessor_command", choice(
      $.include,
      $.p_if,
      $.p_error,
      $.p_warning,
      $.p_define,
    )),

    include: $ => seq(
      '#include',
      field("filename", $.String)
    ),

    block: $ =>
      choice(
        seq(
          'begin',
          common.sepEndBy(';', field("statement", $._statement)),
          'end',
        ),
        seq(
          'block',
          '{',
          common.sepEndBy(';', field("statement", $._statement)),
          '}',
        ),
      ),

    attr: $ => /\[@[a-zA-Z][a-zA-Z0-9_:]*\]/,

    skip: $ => 'skip',
