tools/lsp/squirrel/grammar/pascaligo/test/corpus/attributes.txt
=========
sum
=========

type foo is [@boom] | True | False

----

(source_file
  (type_decl
    (TypeName)
    (sum_type
      (attr)
      (variant (ConstrName))
      (variant (ConstrName))
    )
  )
)


=========
constr
=========

type foo is [@boom] True | False

----

(source_file
  (type_decl
    (TypeName)
    (sum_type
      (variant (attr) (ConstrName))
      (variant (ConstrName))
    )
  )
)


=========
constr with bar
=========

type foo is | [@boom] True | False

----

(source_file
  (type_decl
    (TypeName)
    (sum_type
      (variant (attr) (ConstrName))
      (variant (ConstrName))
    )
  )
)


=========
record
=========

type person is [@layout:comb] record [
  name: string;
]

----

(source_file
  (type_decl
    (TypeName)
    (record_type
      (attr)
      (field_decl (FieldName) (TypeName))
    )
  )
)


=========
field twice
=========

type person is record [
  [@foo][@bar] name: string;
]

----

(source_file
  (type_decl
    (TypeName)
    (record_type
      (field_decl (attr) (attr) (FieldName) (TypeName))
    )
  )
)


=========
function
=========

[@inline] function foo (const a : int) : int is
  block {
    const test : a = 1;
  } with test;

---

(source_file
  (fun_decl
    (attr)
    (NameDecl)
    (param_decl (NameDecl) (TypeName))
    (TypeName)
    (let_expr
      (block
        (const_decl (NameDecl) (TypeName) (Int))
      )
      (Name)
    )
  )
)


=========
const
=========

[@annot] const x : int = 1;

---

(source_file
  (const_decl
    (attr)
    (NameDecl)
    (TypeName)
    (Int)
  )
)


=========
const twice
=========

[@annot1][@annot2] const x : int = 1;

---

(source_file
  (const_decl
    (attr) (attr)
    (NameDecl)
    (TypeName)
    (Int)
  )
)


=========
local const
=========

function foo (const a : int) : int is
  block {
    [@inline] const test : int = 1;
  } with test;

---

(source_file
  (fun_decl
    (NameDecl)
    (param_decl (NameDecl) (TypeName))
    (TypeName)
    (let_expr
      (block
        (const_decl (attr) (NameDecl) (TypeName) (Int))
      )
      (Name)
    )
  )
)
